[gd_scene load_steps=22 format=2]

[ext_resource path="res://player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://player/frames/idle.png" type="Texture" id=2]
[ext_resource path="res://player/frames/idle/idle1.png" type="Texture" id=3]
[ext_resource path="res://player/frames/idle/idle2.png" type="Texture" id=4]
[ext_resource path="res://player/frames/idle/idle3.png" type="Texture" id=5]
[ext_resource path="res://player/frames/wall.png" type="Texture" id=6]
[ext_resource path="res://player/frames/crouch.png" type="Texture" id=7]
[ext_resource path="res://player/frames/Running/Running 4F2.png" type="Texture" id=8]
[ext_resource path="res://player/frames/Running/Running 4F3.png" type="Texture" id=9]
[ext_resource path="res://player/frames/Running/Running 4F4.png" type="Texture" id=10]
[ext_resource path="res://player/frames/Running/Running 4F1.png" type="Texture" id=11]
[ext_resource path="res://player/frames/lookup.png" type="Texture" id=12]
[ext_resource path="res://player/frames/jump/falling1.png" type="Texture" id=13]
[ext_resource path="res://player/frames/jump/falling2.png" type="Texture" id=14]
[ext_resource path="res://player/frames/jump/falling3.png" type="Texture" id=15]
[ext_resource path="res://player/frames/jump/falling4.png" type="Texture" id=16]
[ext_resource path="res://player/bow.gd" type="Script" id=17]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 1

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Wall",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Running",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "lookup",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "falling",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 1.69
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 100.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 1.0
color = Color( 0.734375, 0.215149, 0.215149, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 4, 6 )

[node name="Player" type="KinematicBody2D"]
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.01
motion/sync_to_physics = false
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "lookup"
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "frames" ]

[node name="Weapon" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 17 )

[node name="KillTimer" type="Timer" parent="Weapon"]
process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Timer" type="Timer" parent="Weapon"]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Arrow_origin" type="Position2D" parent="Weapon"]
visible = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="WallCheck_right" type="RayCast2D" parent="."]
enabled = true
exclude_parent = true
cast_to = Vector2( 6, 0 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true
_sections_unfolded = [ "Transform" ]

[node name="WallCheck_Left" type="RayCast2D" parent="."]
enabled = true
exclude_parent = true
cast_to = Vector2( -6, 0 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true
_sections_unfolded = [ "Transform" ]

[node name="DisableInput" type="Timer" parent="."]
process_mode = 1
wait_time = 0.15
one_shot = false
autostart = false

[node name="death_particle" type="Particles2D" parent="."]
emitting = false
amount = 25
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Time", "Transform" ]

[node name="collisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 4 )
_sections_unfolded = [ "shape" ]

[node name="ceilling_cast" type="RayCast2D" parent="."]
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -5 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true

[connection signal="timeout" from="DisableInput" to="." method="_on_DisableInput_timeout"]
